--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=redis-spring-boot-crud
+# Redis configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# MySQL Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/redisdb?useSSL=false&serverTimezone=UTC
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=lauryn
+spring.datasource.password=lauryn
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Enable SQL logging
+spring.jpa.show-sql=true
